--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -55,7 +55,7 @@
   .profile {
     width: 100%;
     height: 100%;
-    background-image: url("../dist/img/image-dalibor.jpg");
+    background-image: url("img/image-dalibor.jpg");
     background-position: center;
     background-size: cover;
     transition: all ease 0.5s;
@@ -109,4 +109,3 @@
     }
   }
 }
-
