--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,10 +14,6 @@
     color: $dark;
     text-decoration: none;
     transition: all ease 0.5s;
-
-    &:hover {
-      color: rgb(8, 90, 90);
-    }
   }
   span {
     font-size: 2rem;
@@ -48,10 +44,6 @@
   top: 0;
   left: 50%;
   transform: translate(-50%, -50%);
-
-  &:hover .profile:before {
-    opacity: 1;
-  }
   .profile {
     width: 100%;
     height: 100%;
@@ -59,11 +51,6 @@
     background-position: center;
     background-size: cover;
     transition: all ease 0.5s;
-
-    &:hover {
-      transform: rotate(8deg) scale(1.05);
-      cursor: pointer;
-    }
   }
   .profile::before {
     content: '';
@@ -107,5 +94,23 @@
     a {
       font-size: 1.5rem;
     }
+    a:active {
+      background-color: transparent;
+    }
+  }
+}
+
+@media (hover: hover) {
+  .info h2 a:hover {
+    color: rgb(8, 90, 90);
+  }
+  .wrapper-profile {
+    &:hover .profile:before {
+    opacity: 1;
+    }
+  .profile:hover {
+    transform: rotate(8deg) scale(1.05);
+    cursor: pointer;
+  }
   }
 }
